Bug 266808 - Konqueror searchbarplugin isnt able to handle utf8
Summary: Konqueror searchbarplugin isnt able to handle utf8
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: searchbarplugin (other bugs)
Version First Reported In: 0.0.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Arend van Beelen jr.
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-21 13:14 UTC by
Modified: 2011-06-11 00:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2011-02-21 13:14:23 UTC
Version:           0.0.1 (using Devel) 
OS:                Linux

In konqueror searchbar if i enter a character with an accent like for example: ç

in the popups suggestions appears severall this: ç


Reproducible: Always




OS: Linux (x86_64) release 2.6.36.2-desktop-2mnb
Compiler: gcc
Comment 1 Dawit Alemayehu 2011-06-11 00:48:13 UTC
Git commit a1aee333be3c60950d95e0f1f0ffbbe65d6c4311 by Dawit Alemayehu.
Committed on 11/06/2011 at 00:33.
Pushed by adawit into branch 'KDE/4.6'.

Treat returned content as Utf8 since that is what we requested to recieve
in the first place.

BUG: 266808
FIXED-IN: 4.6.5

M  +5    -5    konq-plugins/searchbar/opensearch/OpenSearchEngine.cpp     

http://commits.kde.org/kde-baseapps/a1aee333be3c60950d95e0f1f0ffbbe65d6c4311
Comment 2 Dawit Alemayehu 2011-06-11 00:48:41 UTC
Git commit 4648cc1b31fb41b72fdddf4f3a9795b522c70bd2 by Dawit Alemayehu.
Committed on 11/06/2011 at 00:33.
Pushed by adawit into branch 'master'.

Treat returned content as Utf8 since that is what we requested to recieve
in the first place.

BUG: 266808
FIXED-IN: 4.6.5

(cherry picked from commit a1aee333be3c60950d95e0f1f0ffbbe65d6c4311)

M  +5    -5    konq-plugins/searchbar/opensearch/OpenSearchEngine.cpp     

http://commits.kde.org/kde-baseapps/4648cc1b31fb41b72fdddf4f3a9795b522c70bd2