Treat returned content as Utf8 since that is what we requested to recieve in the first place.

BUG: 266808
FIXED-IN: 4.6.5